fixed link issues

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                         <img class="project-img" src="/images/messagingapp1.png">
                     </div>
                 </a>
-               
-               <a href="./Snake/index.html" >
+    
+               <a href="/snake" >
                     <div class="project">
                     <h2 class="project-label">Snake</h1>
                     <img src="/images/snake.png" >
