--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
             </div>
         </a>
 
-        <a href="./Snake/index.html">
+        <a href="/snake">
             <div class="list-project">
                 <div class="list-project">
                     <h2 class="project-label">Snake Game</h1>
