--- a/projects.html
+++ b/projects.html
@@ -18,16 +18,8 @@
                 <h2 class="project-label">Messaging App</h1>
                 <img class="project-img" src="/images/messagingapp1.png">
                 <h5>About Project</h5>
-                <p>She is a fully functional messaging app with real time messaging.</p>
-                <h5>Technologies Used</h5>
-                <ul>
-                    <li>Html</li>
-                    <li>Css</li>
-                    <li>Node.js</li>
-                    <li>MongoDB</li>
-                    <li>Express</li>
-                    <li>Socket.io</li>
-                </ul>
+                <p>A fully functioning messaging app with real time updates. Made using Node, Mongodb, Express , and Socket.io . </p>
+         
             </div>
         </a>
 
@@ -37,13 +29,7 @@
                     <h2 class="project-label">Snake Game</h1>
                     <img class="project-img" src="/images/snake.png">
                     <h5>About Project</h5>
-                    <p>She is a Snake Game written in vanilla javascript</p>
-                    <h5>Technologies Used</h5>
-                    <ul>
-                        <li>Html</li>
-                        <li>Css</li>
-                        <li>Javascript</li>
-                    </ul>
+                    <p>The renowned arcade game Snake recreated using Vanilla Javascript.</p>
                 </div>
             </div>
         </a> 
@@ -53,16 +39,7 @@
                     <h2 class="project-label">Clothing Line Site</h1>
                     <img class="project-img" src="./images/blessed.png">
                     <h5>About Project</h5>
-                    <p>She is a store front for a clothing brand and includes a content management system</p>
-                    <h5>Technologies Used</h5>
-                    <ul>
-                        <li>Html</li>
-                        <li>Css</li>
-                        <li>Javascript</li>
-                        <li>React</li>
-                        <li>Node</li>
-                        <li>MongoDB</li>
-                    </ul>
+                    <p>A store front for a clothing brand which includes a custom content management system. Made using Mongodb, Express, React, and Node</p>
                 </div>
             </div>
         </a> 
@@ -72,13 +49,7 @@
                     <h2 class="project-label">Chess (Still working on it )</h1>
                     <img class="project-img" src="/images/chess.png">
                     <h5>About Project</h5>
-                    <p>She is a Chess Game wrtten in vanilla javascript</p>
-                    <h5>Technologies Used</h5>
-                    <ul>
-                        <li>Html</li>
-                        <li>Css</li>
-                        <li>Javascript</li>
-                    </ul>
+                    <p>Chess Made using Javascript. </p>
                 </div>
             </div>
         </a> 
